--- a/views/front/medya/medyaic.ejs
+++ b/views/front/medya/medyaic.ejs
@@ -112,7 +112,7 @@ style="display: flex; height: 50px; padding-left: 2vw; padding-top: 10px; border
                                     <div class="row" style="margin-left: 2vw; margin-top: 7px;">
                                         <table>
                                             <tr>
-                                                <td>
+                                                <!-- <td>
                                                     <div class="flex items-center">
                                                         <ion-icon name="logo-facebook" class="text-2xl"></ion-icon>
                                                         <span class="text-sm"></span>
@@ -131,17 +131,17 @@ style="display: flex; height: 50px; padding-left: 2vw; padding-top: 10px; border
                                                             class="text-2xl"></ion-icon>
                                                         <span class="text-sm"></span>
                                                     </div>
-                                                </td>
+                                                </td> -->
                                                 <td>
                                                     <div class="flex items-center">
-                                                        <ion-icon style="padding-left: 9vw;" class="text-2xl"
+                                                        <ion-icon class="text-2xl"
                                                             name="heart-outline"></ion-icon>
                                                         <span class="text-sm"></span>
                                                     </div>
                                                 </td>
                                                 <td>
                                                     <div class="flex items-center">
-                                                        <ion-icon style="padding-left: 9vw;" class="text-2xl"
+                                                        <ion-icon style="padding-left: 23vw;" class="text-2xl"
                                                             name="chatbubble-ellipses-outline"></ion-icon>
 
                                                         <span class="text-sm"></span>
@@ -151,7 +151,7 @@ style="display: flex; height: 50px; padding-left: 2vw; padding-top: 10px; border
                                                     <div class="flex items-center">
                                                         <b>
                                                             <ion-icon class="text-2xl"
-                                                                style="color:#03A9F4; font-weight:bolder; padding-left: 9vw;"
+                                                                style="color:#03A9F4; font-weight:bolder; padding-left: 23vw;"
                                                                 name="checkmark-outline"></ion-icon>
 
                                                         </b>
@@ -160,8 +160,8 @@ style="display: flex; height: 50px; padding-left: 2vw; padding-top: 10px; border
                                                 </td>
                                                 <td>
                                                     <div class="flex items-center">
-                                                        <ion-icon class="text-2xl" style="padding-left: 9vw;"
-                                                            name="ellipsis-vertical"></ion-icon>
+                                                        <ion-icon class="text-2xl" style="padding-left: 23vw;"
+                                                            name="share-outline"></ion-icon>
                                                         <span class="text-sm"></span>
                                                     </div>
                                                 </td>
