--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -166,7 +166,14 @@
             </div>
 
         </div>
-
+        <footer>
+            <div style="flex: 10">
+                <input type="text" class="uk-input" style="padding-top: -20px;" placeholder="Lütfen yorumunuzu yazınız . . . ">
+            </div>
+            <div style="flex: 2; align-items: center; justify-content: center;">
+                <i class="fa fa-chevron-right fa-2x" style="color: #62a8ea; padding-top: 10px;"></i>
+            </div>
+        </footer>
         <div id="create-post-modal" class="create-post" uk-modal>
             <div
                 class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical rounded-lg p-0 lg:w-5/12 relative shadow-2xl uk-animation-slide-bottom-small">
