--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -53,6 +53,22 @@
             }
         }
     </style>
+
+<style>
+    footer {
+        display: flex;
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: white;
+        color: white;
+        text-align: center;
+        border-top: 1px solid lightgray;
+        border-radius: 20px;
+        padding-top: 10px;
+    }
+</style>
 </head>
 
 <body>
@@ -61,7 +77,7 @@
             <%- body %>
         </div>
     </div>
-    <%- include ./part/footerflex.ejs %> 
+    
 
 </body>
 
