--- a/views/front/auth/profil.ejs
+++ b/views/front/auth/profil.ejs
@@ -78,12 +78,12 @@
                    
                 </div>
                 <div class="flex justify-between lg:border-t flex-col-reverse lg:flex-row" style="padding-top: 10px;">
-                    <nav class="cd-secondary-nav pl-2 is_ligh -mb-0.5 border-transparent">
+                    <nav class="cd-secondary-nav pl-2 is_ligh -mb-0.5 border-transparent" style="display: flex;">
                         <ul>
                             <li @click="baglac()"><a>Raf</a></li>
-                            <li @click="yorac()"><a>Yorumlar </a></li>
-                            <li @click="begac()"><a>Beğeniler </a></li>
-                            <li @click="medac()"><a>Medya</a></li>
+                            <li style="padding-left: 16vw;" @click="yorac()"><a>Yorumlar </a></li>
+                            <li style="padding-left: 16vw;" @click="begac()"><a>Beğeniler </a></li>
+                            <li style="padding-left: 16vw;" @click="medac()"><a>Medya</a></li>
                         </ul>
                     </nav>
                 </div>
