--- a/views/front/auth/myprofile.ejs
+++ b/views/front/auth/myprofile.ejs
@@ -45,10 +45,10 @@
                         style="padding-top: 10px;">
                         <nav class="cd-secondary-nav pl-2 is_ligh -mb-0.5 border-transparent">
                             <ul>
-                                <li @click="baglac()"><a> Raf</a></li>
-                                <li @click="yorac()"><a>Yorumlar </a></li>
-                                <li @click="begac()"><a>Beğeniler </a></li>
-                                <li @click="medac()"><a>Medya</a></li>
+                                <li @click="baglac()"><a>Raf</a></li>
+                                <li style="padding-left: 14vw;" @click="yorac()"><a>Yorumlar </a></li>
+                                <li style="padding-left: 14vw;" @click="begac()"><a>Beğeniler </a></li>
+                                <li style="padding-left: 14vw;" @click="medac()"><a>Medya</a></li>
                             </ul>
                         </nav>
                     </div>
