--- a/views/front/medya/medyaic.ejs
+++ b/views/front/medya/medyaic.ejs
@@ -9,11 +9,12 @@ style="display: flex; height: 50px; padding-left: 2vw; padding-top: 10px; border
 <div style="flex: 15;">
     <h3 style="margin-top: 0px;" class="text-lg font-semibold">
         <%= medya.title.substring(0,40) %>
-        <ion-icon class="text-2xl" style="text-align: right; float: right; margin-top: 0px;" name="arrow-forward-outline"></ion-icon>
-        <ion-icon class="text-2xl" style="text-align: right; float: right; margin-top: 0px;"name="share-outline"></ion-icon>
     </h3>
 </div>
 <div style="flex: 2;">
+        <ion-icon class="text-2xl" style="margin-top: 0px;"name="share-outline"></ion-icon>
+    <ion-icon class="text-2xl" style="margin-top: 0px;" name="arrow-forward-outline"></ion-icon>
+
     
 </div>
 </header>
