--- a/views/front/arama.ejs
+++ b/views/front/arama.ejs
@@ -93,6 +93,26 @@
                         <hr style="margin-top: -0px;">
                         <% }) %>
                 </ul>
+                <hr><hr>
+                <div style="margin-top: 20px;">
+                    <% medya.forEach(element=> { %>
+                        <div style="display: flex; flex-direction: row; padding-left: 2vw;">
+                            <div style="flex: 10;">
+                                <h3 class="text-xl font-semibold"
+                                    style="text-transform: capitalize; line-height: 20px;">
+                                    <a href="/medyaic/<%= element._id %>">
+                                        <%= element.title %>
+                                    </a>
+                                </h3>
+                                <small>yazan : Abdullah Bektaş | 5s önce</small>
+                            </div>
+                            <div style="flex: 4; height: 130px; width: 130px; max-height: 100px; max-width: 100px; margin-bottom: 35px;"
+                                class="relative overflow-hidden shadow uk-transition-toggle">
+                                <img src="<%= element.kapak %>" style="object-fit: cover;">
+                            </div>
+                        </div>
+                        <% }) %>
+                </div>
                 <!-- <div class="flex flex-wrap gap-1 responsive-tab">
                     <img src="../../../banner.png" style="width: 100%;" class="img-responsive">
                 </div> -->
