--- a/views/front/arama.ejs
+++ b/views/front/arama.ejs
@@ -26,7 +26,7 @@
                 <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
                     <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-                    <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+                    <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-eboeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
                     <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
                 </div>
                 <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
@@ -94,28 +94,90 @@
                         <% }) %>
                 </ul>
                 <hr><hr>
-                <div style="margin-top: 20px;">
-                    <% medya.forEach(element=> { %>
-                        <div style="display: flex; flex-direction: row; padding-left: 2vw;">
-                            <div style="flex: 10;">
-                                <h3 class="text-xl font-semibold"
-                                    style="text-transform: capitalize; line-height: 20px;">
-                                    <a href="/medyaic/<%= element._id %>">
-                                        <%= element.title %>
-                                    </a>
-                                </h3>
-                                <small>yazan : Abdullah Bektaş | 5s önce</small>
-                            </div>
-                            <div style="flex: 4; height: 130px; width: 130px; max-height: 100px; max-width: 100px; margin-bottom: 35px;"
-                                class="relative overflow-hidden shadow uk-transition-toggle">
-                                <img src="<%= element.kapak %>" style="object-fit: cover;">
-                            </div>
-                        </div>
-                        <% }) %>
+                <div style="display: flex; flex-direction: row; width: 100%; padding-top: 10px; margin-left: 2vw;">
+                    <div style="flex:2">
+                        <a href="#">
+                            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg"
+                                style="border-radius: 75px; height: 45px; width: 45px;"></a>
+                                
+                    </div>
+                    <div style="flex:12;">
+                        <span style="margin-top: 20px;"><b>Abdullah Bektaş</b></span><br>
+                        <span style="margin-top: 20px;"><small>Kişi hakkında bio</small></span>
+                    </div>
+                    <div style="flex:4">
+                        <h3 class="text-md font-semibold">
+                        <span style="
+                            text-transform: lowercase; 
+                            display: inline-block;
+                            text-align: center;
+                            border-radius: 100px;
+                            padding: 5px;
+                            text-transform: capitalize;
+                            background-color: #FFCDD2;
+                            border: 1px solid #C62828;
+                            color: #B71C1C;
+                            text-decoration: none;">ABONE OL</span>
+                        </h3>
+                    </div>
                 </div>
-                <!-- <div class="flex flex-wrap gap-1 responsive-tab">
-                    <img src="../../../banner.png" style="width: 100%;" class="img-responsive">
-                </div> -->
+                <hr style="margin-top: 2px;">
+                <div style="display: flex; flex-direction: row; width: 100%; padding-top: 10px; margin-left: 2vw;">
+                    <div style="flex:2">
+                        <a href="#">
+                            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg"
+                                style="border-radius: 75px; height: 45px; width: 45px;"></a>
+                                
+                    </div>
+                    <div style="flex:12;">
+                        <span style="margin-top: 20px;"><b>Abdullah Bektaş</b></span><br>
+                        <span style="margin-top: 20px;"><small>Kişi hakkında bio</small></span>
+                    </div>
+                    <div style="flex:4">
+                        <h3 class="text-md font-semibold">
+                        <span style="
+                            text-transform: lowercase; 
+                            display: inline-block;
+                            text-align: center;
+                            border-radius: 100px;
+                            padding: 5px;
+                            text-transform: capitalize;
+                            background-color: #FFCDD2;
+                            border: 1px solid #C62828;
+                            color: #B71C1C;
+                            text-decoration: none;">ABONE OL</span>
+                        </h3>
+                    </div>
+                </div>
+                <hr style="margin-top: 2px;">
+                <div style="display: flex; flex-direction: row; width: 100%; padding-top: 10px; margin-left: 2vw;">
+                    <div style="flex:2">
+                        <a href="#">
+                            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg"
+                                style="border-radius: 75px; height: 45px; width: 45px;"></a>
+                                
+                    </div>
+                    <div style="flex:12;">
+                        <span style="margin-top: 20px;"><b>Abdullah Bektaş</b></span><br>
+                        <span style="margin-top: 20px;"><small>Kişi hakkında bio</small></span>
+                    </div>
+                    <div style="flex:4">
+                        <h3 class="text-md font-semibold">
+                        <span style="
+                            text-transform: lowercase; 
+                            display: inline-block;
+                            text-align: center;
+                            border-radius: 100px;
+                            padding: 5px;
+                            text-transform: capitalize;
+                            background-color: #FFCDD2;
+                            border: 1px solid #C62828;
+                            color: #B71C1C;
+                            text-decoration: none;">ABONE OL</span>
+                        </h3>
+                    </div>
+                </div>
+                <hr style="margin-top: 2px;">
         </div>
         
     </div>
