--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -148,6 +148,34 @@
                     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                     <a style="float: right; text-align: right;" class="next" onclick="plusSlides(1)">&#10095;</a>
                 </div>
+                <div style="display: flex; flex-direction: row; width: 100%; padding-top: 10px; margin-left: 2vw; position: absolute; margin-top: -11vh;">
+                    <div style="flex:2">
+                        <a href="#">
+                            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg"
+                                style="border-radius: 75px; height: 45px; width: 45px;"></a>
+                                
+                    </div>
+                    <div style="flex:12;">
+                        <span style="margin-top: 20px;"><b>Abdullah Bektaş</b></span><br>
+                        <span style="margin-top: 20px;"><small>Kişi hakkında bio</small></span>
+                    </div>
+                    <div style="flex:4">
+                        <h3 class="text-md font-semibold">
+                        <span style="
+                            text-transform: lowercase; 
+                            display: inline-block;
+                            text-align: center;
+                            border-radius: 100px;
+                            padding: 5px;
+                            margin-left: -10px;
+                            text-transform: capitalize;
+                            background-color: #FFCDD2;
+                            border: 1px solid #C62828;
+                            color: #B71C1C;
+                            text-decoration: none;">ABONE OL</span>
+                        </h3>
+                    </div>
+                </div>
                 <br>
 
                 <!-- The dots/circles -->
