--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -137,31 +137,23 @@
                     <!-- Full-width images with number and caption text -->
                     <div class="mySlides fade">
                         <div class="numbertext">1 / 2</div>
-                        <img src="https://www.upc.edu/templates/big-image-example.jpg/@@images/image.jpeg" style="width:100%; height: 300px; object-fit: cover;">
-                    </div>
+                        <img src="https://www.upc.edu/templates/big-image-example.jpg/@@images/image.jpeg"
+                            style="width:100%; height: 300px; object-fit: cover;">
+                        <div
+                            style="display: flex; flex-direction: row; width: 100%; padding-top: 10px; margin-left: 2vw; position: absolute; margin-top: -11vh;">
+                            <div style="flex:2">
+                                <a href="#">
+                                    <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg"
+                                        style="border-radius: 75px; height: 45px; width: 45px;"></a>
 
-                    <div class="mySlides fade">
-                        <div class="numbertext">2 / 2</div>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Example_of_large_home_in_Southlake.JPG" style="width:100%; height: 300px; object-fit: cover;">
-                    </div>
-
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a style="float: right; text-align: right;" class="next" onclick="plusSlides(1)">&#10095;</a>
-                </div>
-                <div style="display: flex; flex-direction: row; width: 100%; padding-top: 10px; margin-left: 2vw; position: absolute; margin-top: -11vh;">
-                    <div style="flex:2">
-                        <a href="#">
-                            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg"
-                                style="border-radius: 75px; height: 45px; width: 45px;"></a>
-                                
-                    </div>
-                    <div style="flex:12;">
-                        <span style="margin-top: 20px;"><b>Abdullah Bektaş</b></span><br>
-                        <span style="margin-top: 20px;"><small>Kişi hakkında bio</small></span>
-                    </div>
-                    <div style="flex:4">
-                        <h3 class="text-md font-semibold">
-                        <span style="
+                            </div>
+                            <div style="flex:12;">
+                                <span style="margin-top: 20px;"><b>Abdullah Bektaş</b></span><br>
+                                <span style="margin-top: 20px;"><small>Kişi hakkında bio</small></span>
+                            </div>
+                            <div style="flex:4">
+                                <h3 class="text-md font-semibold">
+                                    <span style="
                             text-transform: lowercase; 
                             display: inline-block;
                             text-align: center;
@@ -173,9 +165,51 @@
                             border: 1px solid #C62828;
                             color: #B71C1C;
                             text-decoration: none;">ABONE OL</span>
-                        </h3>
+                                </h3>
+                            </div>
+                        </div>
                     </div>
+
+                    <div class="mySlides fade">
+                        <div class="numbertext">2 / 2</div>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Example_of_large_home_in_Southlake.JPG"
+                            style="width:100%; height: 300px; object-fit: cover;">
+                        <div
+                            style="display: flex; flex-direction: row; width: 100%; padding-top: 10px; margin-left: 2vw; position: absolute; margin-top: -11vh;">
+                            <div style="flex:2">
+                                <a href="#">
+                                    <img src="https://pbs.twimg.com/profile_images/1333444765799550976/z_Ai2_Io_400x400.jpg"
+                                        style="border-radius: 75px; height: 45px; width: 45px;"></a>
+
+                            </div>
+                            <div style="flex:12;">
+                                <span style="margin-top: 20px; color: black;"><b>Abdullah Bektaş</b></span><br>
+                                <span style="margin-top: 20px;"><small>Kişi hakkında bio</small></span><br>
+                                <span style="margin-top: 20px; border: 1 px solid orange; border-radius: 7px; background-color: yellow; color: black; padding:1px"><small>Reklam</small></span>
+                            </div>
+                            <div style="flex:4">
+                                <h3 class="text-md font-semibold">
+                                    <span style="
+                            text-transform: lowercase; 
+                            display: inline-block;
+                            text-align: center;
+                            border-radius: 100px;
+                            padding: 5px;
+                            margin-left: -20px;
+                            text-transform: capitalize;
+                            background-color: #FFCDD2;
+                            border: 1px solid #C62828;
+                            color: #B71C1C;
+                            text-decoration: none;">GİT</span>
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+
+                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                    <a style="float: right; text-align: right;" class="next" onclick="plusSlides(1)">&#10095;</a>
                 </div>
+
                 <br>
 
                 <!-- The dots/circles -->
@@ -354,31 +388,31 @@
             }
         </script>
 
-<script>
-    var slideIndex = 1;
-    showSlides(slideIndex);
-    
-    function plusSlides(n) {
-      showSlides(slideIndex += n);
-    }
-    
-    function currentSlide(n) {
-      showSlides(slideIndex = n);
-    }
-    
-    function showSlides(n) {
-      var i;
-      var slides = document.getElementsByClassName("mySlides");
-      var dots = document.getElementsByClassName("dot");
-      if (n > slides.length) {slideIndex = 1}    
-      if (n < 1) {slideIndex = slides.length}
-      for (i = 0; i < slides.length; i++) {
-          slides[i].style.display = "none";  
-      }
-      for (i = 0; i < dots.length; i++) {
-          dots[i].className = dots[i].className.replace(" active", "");
-      }
-      slides[slideIndex-1].style.display = "block";  
-      dots[slideIndex-1].className += " active";
-    }
-    </script>
+        <script>
+            var slideIndex = 1;
+            showSlides(slideIndex);
+
+            function plusSlides(n) {
+                showSlides(slideIndex += n);
+            }
+
+            function currentSlide(n) {
+                showSlides(slideIndex = n);
+            }
+
+            function showSlides(n) {
+                var i;
+                var slides = document.getElementsByClassName("mySlides");
+                var dots = document.getElementsByClassName("dot");
+                if (n > slides.length) { slideIndex = 1 }
+                if (n < 1) { slideIndex = slides.length }
+                for (i = 0; i < slides.length; i++) {
+                    slides[i].style.display = "none";
+                }
+                for (i = 0; i < dots.length; i++) {
+                    dots[i].className = dots[i].className.replace(" active", "");
+                }
+                slides[slideIndex - 1].style.display = "block";
+                dots[slideIndex - 1].className += " active";
+            }
+        </script>
