--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -200,7 +200,7 @@
                             background-color: #FFCDD2;
                             border: 1px solid #C62828;
                             color: #B71C1C;
-                            text-decoration: none;">GİT</span>
+                            text-decoration: none;">SATIN AL</span>
                                 </h3>
                             </div>
                         </div>
