--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -183,8 +183,8 @@
 
                             </div>
                             <div style="flex:12;">
-                                <span style="margin-top: 20px; color: black;"><b>Abdullah Bektaş</b></span><br>
-                                <span style="margin-top: 20px;"><small>Kişi hakkında bio</small></span><br>
+                                <span style="margin-top: 20px; color: white; text-shadow:1px 1px 2px black"><b>Abdullah Bektaş</b></span><br>
+                                <span style="margin-top: 20px; color: white; text-shadow:1px 1px 2px black"><small>Kişi hakkında bio</small></span><br>
                                 <span style="margin-top: 20px; border: 1 px solid orange; border-radius: 7px; background-color: yellow; color: black; padding:1px"><small>Reklam</small></span>
                             </div>
                             <div style="flex:4">
@@ -197,9 +197,9 @@
                             padding: 5px;
                             margin-left: -20px;
                             text-transform: capitalize;
-                            background-color: #FFCDD2;
-                            border: 1px solid #C62828;
-                            color: #B71C1C;
+                            background-color: #E3F2FD;
+                            border: 1px solid #0D47A1;
+                            color: #0091EA;
                             text-decoration: none;">SATIN AL</span>
                                 </h3>
                             </div>
