--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -172,7 +172,7 @@
 
                     <div class="mySlides fade">
                         <div class="numbertext">2 / 2</div>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Example_of_large_home_in_Southlake.JPG"
+                        <img src="https://productimages.hepsiburada.net/s/5/550/9694870569010.jpg/format:webp"
                             style="width:100%; height: 300px; object-fit: cover;">
                         <div
                             style="display: flex; flex-direction: row; width: 100%; padding-top: 10px; margin-left: 2vw; position: absolute; margin-top: -11vh;">
@@ -185,23 +185,25 @@
                             <div style="flex:12;">
                                 <span style="margin-top: 20px; color: white; text-shadow:1px 1px 2px black"><b>Abdullah Bektaş</b></span><br>
                                 <span style="margin-top: 20px; color: white; text-shadow:1px 1px 2px black"><small>Kişi hakkında bio</small></span><br>
-                                <span style="margin-top: 20px; border: 1 px solid orange; border-radius: 7px; background-color: yellow; color: black; padding:1px"><small>Reklam</small></span>
+                                <span style="margin-top: 20px; border: 1 px solid orange; border-radius: 7px; background-color: orange; color: black; padding:1px"><small>Reklam</small></span>
                             </div>
                             <div style="flex:4">
-                                <h3 class="text-md font-semibold">
+                                <a>
                                     <span style="
-                            text-transform: lowercase; 
                             display: inline-block;
+                            text-transform: lowercase;
                             text-align: center;
                             border-radius: 100px;
                             padding: 5px;
-                            margin-left: -20px;
+                            margin-left: -23px;
                             text-transform: capitalize;
                             background-color: #E3F2FD;
                             border: 1px solid #0D47A1;
                             color: #0091EA;
-                            text-decoration: none;">SATIN AL</span>
-                                </h3>
+                            text-decoration: none;">
+                                <b>satın al</b>
+                            </span>
+                                </a>
                             </div>
                         </div>
                     </div>
