--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -120,6 +120,7 @@
                         <a href="/sozluk/<%= element.tag %>" style="text-transform: lowercase; display: inline-block;
                         text-align: center;
                         margin: 5px;
+                        margin-left: -20px;
                         background-color: #E3F2FD;
                         border: 1px solid #0091EA;
                         color: #0D47A1;
