--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -159,7 +159,7 @@
                             text-align: center;
                             border-radius: 100px;
                             padding: 5px;
-                            margin-left: -25px;
+                            margin-left: -2px;
                             text-transform: capitalize;
                             background-color: #FFCDD2;
                             border: 1px solid #C62828;
@@ -183,9 +183,12 @@
 
                             </div>
                             <div style="flex:12;">
-                                <span style="margin-top: 20px; color: white; text-shadow:1px 1px 2px black"><b>Abdullah Bektaş</b></span><br>
-                                <span style="margin-top: 20px; color: white; text-shadow:1px 1px 2px black"><small>Kişi hakkında bio</small></span><br>
-                                <span style="margin-top: 20px; border: 1 px solid orange; border-radius: 7px; background-color: orange; color: black; padding:1px"><small>Reklam</small></span>
+                                <span style="margin-top: 20px; color: white; text-shadow:1px 1px 2px black"><b>Abdullah
+                                        Bektaş</b></span><br>
+                                <span style="margin-top: 20px; color: white; text-shadow:1px 1px 2px black"><small>Kişi
+                                        hakkında bio</small></span><br>
+                                <span
+                                    style="margin-top: 20px; border: 1 px solid orange; border-radius: 7px; background-color: orange; color: black; padding:1px"><small>Reklam</small></span>
                             </div>
                             <div style="flex:4">
                                 <a>
@@ -201,8 +204,8 @@
                             border: 1px solid #0D47A1;
                             color: #0091EA;
                             text-decoration: none;">
-                                <b>satın al</b>
-                            </span>
+                                        <b>satın al</b>
+                                    </span>
                                 </a>
                             </div>
                         </div>
@@ -230,7 +233,17 @@
                                         <%= element.title %>
                                     </a>
                                 </h3>
-                                <small>yazan : Abdullah Bektaş | 5s önce</small>
+                                <table>
+                                    <tr>
+                                        <td><a href="#">
+                                                <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg"
+                                                    style="border-radius: 75px; height: 45px; width: 45px;"></a></td>
+                                        <td>
+                                            <span style="margin-top: 20px;"><b>Abdullah Bektaş</b></span><br>
+                                            <span style="margin-top: 20px;"><small><b>15 Saat Önce</b></small></span>
+                                        </td>
+                                    </tr>
+                                </table>
                             </div>
                             <div style="flex: 4; height: 130px; width: 130px; max-height: 100px; max-width: 100px; margin-bottom: 35px;"
                                 class="relative overflow-hidden shadow uk-transition-toggle">
