--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -140,16 +140,16 @@
                         <img src="https://www.upc.edu/templates/big-image-example.jpg/@@images/image.jpeg"
                             style="width:100%; height: 300px; object-fit: cover;">
                         <div
-                            style="display: flex; flex-direction: row; width: 100%; padding-top: 10px; margin-left: 2vw; position: absolute; margin-top: -11vh;">
-                            <div style="flex:2">
+                            style="display: flex; flex-direction: row; width: 100%; padding-top: 10px; margin-left: 2vw; position: absolute; margin-top: -14vh;">
+                            <div style="flex:3">
                                 <a href="#">
                                     <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg"
-                                        style="border-radius: 75px; height: 45px; width: 45px;"></a>
+                                        style="border-radius: 75px; height: 75px; width: 75px;"></a>
 
                             </div>
-                            <div style="flex:12;">
-                                <span style="margin-top: 20px;"><b>Abdullah Bektaş</b></span><br>
-                                <span style="margin-top: 20px;"><small>Kişi hakkında bio</small></span>
+                            <div style="flex:11; margin-top: 10px;">
+                                <span style="margin-top: 20px; color:white"><b>Abdullah Bektaş</b></span><br>
+                                <span style="margin-top: 20px; color:white"><small>Kişi hakkında bio</small></span>
                             </div>
                             <div style="flex:4">
                                 <h3 class="text-md font-semibold">
@@ -159,7 +159,7 @@
                             text-align: center;
                             border-radius: 100px;
                             padding: 5px;
-                            margin-left: -2px;
+                            padding-right: -20px;
                             text-transform: capitalize;
                             background-color: #FFCDD2;
                             border: 1px solid #C62828;
@@ -175,14 +175,14 @@
                         <img src="https://productimages.hepsiburada.net/s/5/550/9694870569010.jpg/format:webp"
                             style="width:100%; height: 300px; object-fit: cover;">
                         <div
-                            style="display: flex; flex-direction: row; width: 100%; padding-top: 10px; margin-left: 2vw; position: absolute; margin-top: -11vh;">
-                            <div style="flex:2">
+                            style="display: flex; flex-direction: row; width: 100%; padding-top: 10px; margin-left: 2vw; position: absolute; margin-top: -14vh;">
+                            <div style="flex:3">
                                 <a href="#">
                                     <img src="https://pbs.twimg.com/profile_images/1333444765799550976/z_Ai2_Io_400x400.jpg"
-                                        style="border-radius: 75px; height: 45px; width: 45px;"></a>
+                                        style="border-radius: 75px; height: 75px; width: 75px;"></a>
 
                             </div>
-                            <div style="flex:12;">
+                            <div style="flex:11; margin-top: 10px;">
                                 <span style="margin-top: 20px; color: white; text-shadow:1px 1px 2px black"><b>Abdullah
                                         Bektaş</b></span><br>
                                 <span style="margin-top: 20px; color: white; text-shadow:1px 1px 2px black"><small>Kişi
