--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -185,8 +185,7 @@
                             <div style="flex:11; margin-top: 10px;">
                                 <span style="margin-top: 20px; color: white; text-shadow:1px 1px 2px black"><b>Abdullah
                                         Bektaş</b></span><br>
-                                <span style="margin-top: 20px; color: white; text-shadow:1px 1px 2px black"><small>Kişi
-                                        hakkında bio</small></span><br>
+                                <span style="margin-top: 20px; color: white; text-shadow:1px 1px 2px black"><b>kullanışlı akıllı saat 19.99 ₺</b></span><br>
                                 <span
                                     style="margin-top: 20px; border: 1 px solid orange; border-radius: 7px; background-color: orange; color: black; padding:1px"><small>Reklam</small></span>
                             </div>
